# sibom-ia

./: .gitignore  .kilocodemodes  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARQUITECTURA_FUNCTION_CALLING.md  AUDIT_COMPLETE.md  BYPASS_LLM_STRATEGY.md  CHANGELOG_REFACTOR_FILTROS.md  DATA_CATALOG_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GITHUB.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_RESUMEN.md  DEPLOYMENT_STATUS.md  EMBEDDINGS_COMPARISON.md  EMBEDDINGS_IMPLEMENTATION_PLAN.md  FIX_COMPARATIVE_QUERIES.md  FIX_MASSIVE_LISTINGS.md  FIX_MASSIVE_LISTINGS_COMPLETE.md  FIX_SEMANTIC_SEARCH_CLASSIFICATION.md  FIX_URLS_INDIVIDUALES.md  FIX_VERCEL_DEPLOYMENT.md  MIGRACION.md  Notas de martin.md  OPENAI_EMBEDDINGS_SETUP_GUIDE.md  PHASE2_CONSOLIDATION_COMPLETE.md  PHASE3_OBSOLETE_SCRIPTS_COMPLETE.md  PHASE6_SQL_RETRIEVER_COMPLETE.md  README.md  RESUMEN_CATALOGO_DATOS.md  SESSION_SUMMARY_2026-01-10.md  SIMPLIFICACION_RADICAL_LLM.md  STRATEGY_COMPARATIVE_QUERIES.md  VECTOR_SEARCH_IMPLEMENTATION_COMPLETE.md  VECTOR_SEARCH_SETUP_COMPLETE.md  adsad.md  prepare_for_github.sh  verify_deployment_ready.sh
sat-analysis/: .dockerignore  Dockerfile  RAILWAY_DEPLOY.md  README.md  VALIDACION_UMBRALES_CIENTIFICA.md  app.py  codigos_partidos_arba.json  codigos_partidos_arba.md  pyproject.toml  railway.json  requirements.txt  thresholds.yaml
sat-analysis/scripts/: calibrate_thresholds.py  diagnose_indices.py  validate_arba.py  validate_stac.py
sat-analysis/src/sat_analysis/: __init__.py  cli.py  config.py
sat-analysis/tests/: __init__.py  conftest.py  test_stac.py
(+13157 files in other folders)
